compiler/test/conformance/testdata/errors/11_body_return_type_mismatch.yz
bad #(Int) {
    print("oops")
}
main: { bad() }
